GeographicValidator works.